# bizclaw

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy-landing.sh
crates/bizclaw-brain/src/: attention.rs  grammar.rs  kv_cache.rs  lib.rs  llamacpp.rs
crates/bizclaw-channels/: Cargo.toml
crates/bizclaw-channels/src/: email.rs  lib.rs
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-gateway/src/: dashboard.html  routes.rs  server.rs  ws.rs
crates/bizclaw-platform/: Cargo.toml
crates/bizclaw-platform/src/: admin.rs  admin_dashboard.html  auth.rs  config.rs  db.rs  lib.rs  tenant.rs
crates/bizclaw-providers/src/: deepseek.rs  gemini.rs  groq.rs  lib.rs
crates/bizclaw-tools/: Cargo.toml
crates/bizclaw-tools/src/: calendar.rs  group_summarizer.rs  lib.rs  web_search.rs
landing/: index.html
