[package]
name = "bizclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Communication channel implementations including Zalo"

[dependencies]
bizclaw-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
aes.workspace = true
rsa.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
async-stream = "0.3"
lettre.workspace = true
imap.workspace = true
native-tls.workspace = true
mail-parser.workspace = true
