[package]
name = "bizclaw-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-tenant platform for BizClaw — manage multiple AI agents on one VPS"

[dependencies]
bizclaw-core.workspace = true
bizclaw-channels.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
